[package]
name = "hyper-socks"
version = "0.2.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "SOCKS proxy support for Hyper clients"
repository = "https://github.com/sfackler/rust-hyper-socks"
documentation = "https://sfackler.github.io/rust-hyper-socks/doc/v0.2.1/hyper_socks"
readme = "README.md"

[dependencies]
socks = "0.2"
hyper = "0.10"

[dev-dependencies]
hyper-openssl = "0.2"
